--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>MarkSheet</title>
+    <link rel="stylesheet" href="style.css" />
     <meta name="description" content="Empty HTML">
   </head>
   <body>
